@@ -1,3 +1,13 @@
+2007-09-21  Sean Egan  <seanegan@gmail.com>
+
+        Reviewed by Alp.
+
+        Add an "execute_script" method to programmatically call Javascript
+        http://bugs.webkit.org/show_bug.cgi?id=15255
+
+        * Api/webkitgtkpage.cpp:
+        * Api/webkitgtkpage.h:
+
 === end merge of trunk/25970-26102 08-10-2007 ===
 
 === start merge of trunk 03-10-2007 ===
